--- a/front/src/index.css
+++ b/front/src/index.css
@@ -23,6 +23,8 @@
 	--edo-hvr-btn: #3d4f58;
 	--inp-bg: rgba(194, 194, 194, 0.295);
 	--inp-outline-focus: rgb(39, 151, 255);
+
+	--loader-items: rgb(226, 226, 226);
 }
 
 /* @font-face {
