--- a/front/src/index.css
+++ b/front/src/index.css
@@ -17,7 +17,9 @@
 	--navbottom-bg: #fafdff;
 	--navbottom-links-bottom-line: rgba(184, 184, 184, 0.667);
 	--blackRgba: rgba(40, 39, 38, 0.579);
+	--black: #000;
 	--navbottom-underline: rgba(34, 255, 141, 0.987);
+	--km-content: rgb(255, 252, 246);
 
 	--edo-color: #587380;
 	--edo-hvr-btn: #3d4f58;
