--- a/front/src/components/Pages/Auth/Registration.tsx/Registarion.css
+++ b/front/src/components/Pages/Auth/Registration.tsx/Registarion.css
@@ -6,7 +6,7 @@
 	align-items: center;
 }
 .form_errors-text {
-	color: red;
+	color: var(--red);
 }
 
 .reg_inp {
@@ -18,6 +18,19 @@
 }
 
 .reg_inp:focus {
+	background-color: var(--inp-bg);
+	outline: 1px solid var(----inp-outline-focus);
+}
+
+.reg_inp-select {
+	padding: 13px 13px 13px 13px;
+	border-radius: 10px;
+	border: none;
+	outline: 1px solid var(--blackRgba);
+	transition: background-color 0.2s ease-in-out;
+}
+
+.reg_inp-select:focus {
 	background-color: var(--inp-bg);
 	outline: 1px solid var(----inp-outline-focus);
 }
