--- a/front/src/components/Pages/ZayavkiLinks/ZayavkiLinks.css
+++ b/front/src/components/Pages/ZayavkiLinks/ZayavkiLinks.css
@@ -15,9 +15,14 @@
 	border-radius: 5px;
 	padding: 10px;
 	width: calc((100% - 10px * 3) / 4);
+	transition: background-color 0.2s ease-in-out;
 }
 
 .zayavki_nav-links:focus {
 	transition: background-color 0.2s ease-in-out;
-	border: 1px solid red;
+	border: 1px solid rgb(78, 255, 166);
+}
+
+.zayavki_nav-links:active:not(:focus-visible) {
+	color: var(--blackRgba);
 }
