--- a/front/src/components/Pages/Auth/Authorization/Authorization.css
+++ b/front/src/components/Pages/Auth/Authorization/Authorization.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
-	background-color: rgb(238, 247, 255);
+	background-color: var(--km-content);
 	align-items: center;
 }
 .form_errors-text {
@@ -11,13 +11,5 @@
 
 .reg_inp {
 	padding: 13px 13px 13px 13px;
-	border-radius: 10px;
-	border: none;
-	outline: 1px solid var(--blackRgba);
 	transition: background-color 0.2s ease-in-out;
-}
-
-.reg_inp:focus {
-	background-color: var(--inp-bg);
-	outline: 1px solid var(----inp-outline-focus);
 }
