--- a/front/src/components/Pages/ZayavkiLinks/ZayavkiLinks.css
+++ b/front/src/components/Pages/ZayavkiLinks/ZayavkiLinks.css
@@ -15,6 +15,7 @@
 	border-radius: 5px;
 	padding: 10px;
 	width: calc((100% - 10px * 3) / 4);
+	color: var(--edo-zayavki-color);
 	transition: background-color 0.2s ease-in-out;
 }
 
