--- a/front/src/components/Pages/UserProfile/Profile.css
+++ b/front/src/components/Pages/UserProfile/Profile.css
@@ -3,20 +3,29 @@
 	align-items: center;
 	justify-content: space-between;
 }
-.profile__content {
+.profile_content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	gap: 10px;
+}
+
+.uInfo_content {
 	display: flex;
 	align-items: center;
-	width: calc((100% - 10px) / 2);
+	/* gap: 10px; */
+}
+
+.uLeft_content {
+	background: rgb(236, 236, 236);
+	border-radius: 10px;
+	padding: 20px;
+	min-height: 300px;
+	max-width: 100px;
 	width: 100%;
 }
 
-.center_content {
-	display: flex;
-	width: 100%;
-	justify-content: center;
-}
-
-.left_side-content {
+.uCenter_info {
+	margin: 0 auto;
 	background: red;
-	padding: 50px;
 }
