--- a/front/src/components/UI/PrevLink/Prev.css
+++ b/front/src/components/UI/PrevLink/Prev.css
@@ -3,6 +3,8 @@
 	padding: 13px 13px 13px 13px;
 	border-radius: 10px;
 	transition: background-color 0.2s ease-in-out;
+	max-width: 100px;
+	width: 100%;
 }
 
 .prevLink:hover {
