--- a/front/src/components/UI/Loader/Loader.css
+++ b/front/src/components/UI/Loader/Loader.css
@@ -1,60 +1,45 @@
-@keyframes first {
-	0%,
-	33.3%,
-	100% {
-		transform: translateY(0);
-	}
-	66.6% {
-		transform: translateY(4px);
-	}
-}
-
-@keyframes second {
-	0%,
-	100% {
-		transform: translateY(4px);
-	}
-	33.3%,
-	66.6% {
-		transform: translateY(0);
-	}
-}
-
-@keyframes third {
-	0%,
-	66.6%,
-	100% {
-		transform: translateY(0);
-	}
-	33.3% {
-		transform: translateY(4px);
-	}
-}
-
-.loader {
+.loading__container {
 	display: flex;
-	justify-content: space-between;
-	width: 46px;
-	height: 8px;
+	position: fixed;
+	align-items: center;
+	justify-content: center;
+	/* transform: translate(-50%, -50%); */
+	z-index: 9999;
+	top: 0;
+	left: 0;
+	height: 100vh;
+	width: 100%;
+	background: rgba(255, 255, 255, 0.537);
 }
 
-.loader-item {
-	width: 8px;
-	height: 8px;
-	background-color: var(--loader-items);
+.loading__content {
+	background: #e9e9e9dc;
+	border-radius: 5px;
+	padding: 20px;
+}
+
+.loading__spinner {
+	display: flex;
+	align-items: center;
+	margin: 0 auto;
+	border: 4px solid rgb(255, 255, 255);
+	border-left-color: var(--text-orange);
 	border-radius: 50%;
-	position: relative;
-	bottom: 0;
+	max-width: 40px;
+	min-height: 40px;
+	animation: spin 1s linear infinite;
 }
 
-.loader-item:nth-of-type(2n) {
-	animation: second 1.05s linear infinite;
+.loading__message {
+	font-size: 16px;
 }
 
-.loader-item:nth-of-type(2n + 1) {
-	animation: third 1.05s linear infinite;
+@keyframes spin {
+	to {
+		transform: rotate(360deg);
+	}
 }
 
-.loader-item:first-of-type {
-	animation: first 1.05s linear infinite;
+.loading__container.hide {
+	display: none;
 }
