--- a/front/src/components/Pages/Auth/Authorization/Authorization.css
+++ b/front/src/components/Pages/Auth/Authorization/Authorization.css
@@ -1,10 +1,39 @@
 .form {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
-	background-color: var(--km-content);
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  min-height: 380px;
+  min-width: 300px;
 }
+
+.form_form-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  width: 100%;
+}
+
+.reg_inp {
+  padding: 15px;
+  width: 100%;
+  outline: none;
+  border: 1px solid var(--edo-inp-border);
+  border-radius: 10px;
+  text-align: start;
+}
+
+.reg_inp:hover {
+  border: 1px solid var(--edo-inp-hvr-border);
+  transition: all 300ms;
+}
+
+.reg_inp:focus {
+  border: 1px solid var(--edo-inp-hvr-border);
+}
+
 .form_errors-text {
-	color: var(--red);
+  color: var(--red);
 }
