--- a/front/src/components/Pages/ZayavkiLinks/ZayavkiLinks.css
+++ b/front/src/components/Pages/ZayavkiLinks/ZayavkiLinks.css
@@ -1,37 +1,38 @@
 .zayavkilinks__content {
-	background-color: rgb(255, 252, 246);
-	padding: 20px 20px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-	border-radius: 10px;
+  background-color: #fff;
+  padding: 20px 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
 }
 .zayavkilinks__nav {
-	display: flex;
-	gap: 10px;
-	justify-content: flex-start;
-	flex-wrap: wrap;
+  display: flex;
+  gap: 10px;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .url_location {
-	text-align: start;
+  text-align: start;
 }
 
 .zayavki_nav-links {
-	border-radius: 5px;
-	padding: 10px;
-	width: calc((100% - 10px * 3) / 4);
-	color: var(--edo-zayavki-color);
-	transition: background-color 0.2s ease-in-out;
+  border-radius: 10px;
+  padding: 10px;
+  width: calc((100% - 10px * 3) / 4);
+  color: var(--edo-zayavki-color);
+  transition: background-color 0.2s ease-in-out;
+  border: 1px solid #0000000a;
 }
 
 .zayavki_nav-links:hover:not(:focus-visible) {
-	background-color: var(--skillbox-hvr);
+  background-color: #00000007;
 }
 
 .zayavki_nav-links:focus {
-	transition: background-color 0.2s ease-in-out;
-	border: 1px solid var(--links-outline);
+  transition: background-color 0.2s ease-in-out;
+  border: 1px solid var(--links-outline);
 }
 
 .zayavki_nav-links:active:not(:focus-visible) {
-	color: var(--blackRgba);
+  color: var(--blackRgba);
 }
