--- a/front/src/components/Pages/Navigation/Navigation.css
+++ b/front/src/components/Pages/Navigation/Navigation.css
@@ -15,6 +15,28 @@
   display: flex;
   gap: 10px;
   align-items: center;
+  padding: 15px;
+  border-radius: 5px;
+}
+
+.user_info:hover {
+  background-color: #f1f5f9;
+  cursor: pointer;
+}
+
+.user_info-icon {
+  background-color: #e2e8f0;
+  padding: 5px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.settings {
+  display: flex;
+  gap: 10px;
+  align-items: center;
 }
 
 /* User account */
