--- a/front/src/components/Pages/Auth/Authorization/Authorization.css
+++ b/front/src/components/Pages/Auth/Authorization/Authorization.css
@@ -1,4 +1,4 @@
-.form {
+.form-auth {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -8,7 +8,7 @@
   min-width: 300px;
 }
 
-.form_form-content {
+.form-auth_form-content {
   display: flex;
   flex-direction: column;
   align-items: center;
