--- a/front/src/components/Pages/Auth/Registration.tsx/Registarion.css
+++ b/front/src/components/Pages/Auth/Registration.tsx/Registarion.css
@@ -51,3 +51,13 @@
 .reg_inp-option {
   text-align: start;
 }
+
+.email-message {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.email-message p {
+  font-size: 14px;
+}
