--- a/front/src/components/Pages/Register/Register.css
+++ b/front/src/components/Pages/Register/Register.css
@@ -1,19 +1,30 @@
 .register__content {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .register_header-list {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding-bottom: 10px;
-	border-bottom: 1px solid var(--navbottom-links-bottom-line);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+  border-bottom: 1px solid var(--navbottom-links-bottom-line);
 }
 
 .addrequest_btn {
-	align-self: flex-end;
-	padding: 10px 15px;
-	font-size: 14px;
+  align-self: flex-end;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  padding: 7px 15px;
+  border-radius: 60px;
+}
+
+.addrequest_btn p {
+  font-size: 14px;
+  font-weight: 500;
+  text-transform: uppercase;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
