--- a/front/src/components/Pages/UserProfile/Profile.css
+++ b/front/src/components/Pages/UserProfile/Profile.css
@@ -10,6 +10,12 @@
 	gap: 10px;
 }
 
+.ustory_content {
+	background-color: rgba(255, 224, 166, 0.843);
+	border-radius: 10px;
+	padding: 10px 10px 10px 10px;
+}
+
 .uInfo_content {
 	display: flex;
 	align-items: center;
