--- a/front/src/index.css
+++ b/front/src/index.css
@@ -40,7 +40,7 @@
 	--inp-outline-focus: rgb(39, 151, 255);
 	--loader-items: rgb(226, 226, 226);
 
-	--inp-border: #ccc;
+	--inp-border: #dddcdccb;
 	--edo-inp-border: #13b93757;
 	--edo-inp-hvr-border: #16c53c;
 	--edo-inp-active-border: #15ea43;
