--- a/front/src/components/Pages/UserProfile/Profile.css
+++ b/front/src/components/Pages/UserProfile/Profile.css
@@ -36,9 +36,10 @@
 	border-radius: 10px;
 	padding: 20px;
 	min-height: 400px;
+	gap: 20px;
+	outline: 1px solid var(--inp-border);
 	/* background: rgb(236, 236, 236); */
 	/* border: 1px solid rgba(228, 225, 219, 0.698); */
-	gap: 20px;
 }
 
 .MuiPaper-root {
