--- a/front/src/components/Pages/UserProfile/Profile.css
+++ b/front/src/components/Pages/UserProfile/Profile.css
@@ -41,6 +41,11 @@
 	/* background: rgb(236, 236, 236); */
 	/* border: 1px solid rgba(228, 225, 219, 0.698); */
 }
+.uaccordion_label {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+}
 
 .MuiPaper-root {
 	box-shadow: none;
