--- a/front/src/components/Pages/UserProfile/Profile.css
+++ b/front/src/components/Pages/UserProfile/Profile.css
@@ -2,6 +2,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	margin-bottom: 20px;
 }
 .profile_content {
 	display: flex;
@@ -34,10 +35,10 @@
 	display: flex;
 	flex-direction: column;
 	border-radius: 10px;
-	padding: 20px;
 	min-height: 400px;
 	gap: 20px;
 	outline: 1px solid var(--inp-border);
+	padding: 20px;
 	/* background: rgb(236, 236, 236); */
 	/* border: 1px solid rgba(228, 225, 219, 0.698); */
 }
@@ -61,10 +62,11 @@
 	display: flex;
 	justify-content: space-between;
 	gap: 20px;
-	padding: 20px 20px;
 	border-radius: 10px;
 	width: 100%;
 	min-height: 400px;
+	/* padding: 20px; */
+	/* border: 1px solid orange; */
 }
 
 .user-info {
