--- a/front/src/components/Pages/Register/Register.css
+++ b/front/src/components/Pages/Register/Register.css
@@ -19,6 +19,8 @@
   gap: 5px;
   padding: 7px 15px;
   border-radius: 60px;
+  color: #ededed;
+  color: #ffffff;
 }
 
 .addrequest_btn p {
@@ -27,4 +29,8 @@
   text-transform: uppercase;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.pointer-cursor {
+  cursor: pointer;
 }
