--- a/front/src/components/Pages/Identification/Identification.css
+++ b/front/src/components/Pages/Identification/Identification.css
@@ -1,25 +1,25 @@
 .wrapper-prev {
-  width: 100%;
-  background-color: #fff;
-  margin: 20px 0 20px 0;
-  padding: 15px 0;
+	width: 100%;
+	background-color: #fff;
+	margin: 20px 0 20px 0;
+	padding: 15px 0;
 }
 
 .wrapper-identification {
-  border: 2px solid rgba(128, 128, 128, 0.184);
-  padding: 20px 0 20px 0;
+	border: 2px solid rgba(128, 128, 128, 0.184);
+	padding: 20px 0 20px 0;
 }
 
 .wrapper-identification h1 {
-  font-weight: 400;
-  text-align: center;
+	font-weight: 400;
+	text-align: center;
 }
 
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 20px;
+.uidentity_form {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 10px;
+	padding: 20px;
 }
