--- a/front/src/components/Pages/AddRequest/AddRequest.css
+++ b/front/src/components/Pages/AddRequest/AddRequest.css
@@ -55,3 +55,24 @@
   font-weight: bold;
   color: #fff;
 }
+
+.wrapper-table {
+  width: 100%;
+  margin-top: 20px;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  text-align: start;
+  padding-bottom: 15px;
+  /* font-weight: 600; */
+}
+
+.table-data {
+  border: 1px solid #000;
+  padding: 20px;
+}
