--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -1,142 +1,198 @@
 .profile_header {
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	margin-bottom: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
 .profile_content {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	gap: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
 }
 
 .ustory_content {
-	background-color: rgba(255, 224, 166, 0.843);
-	border-radius: 10px;
-	padding: 10px 10px 10px 10px;
+  background-color: rgba(255, 224, 166, 0.843);
+  border-radius: 10px;
+  padding: 10px 10px 10px 10px;
 }
 
-.uInfo_content {
-	display: flex;
-	align-items: center;
-	gap: 20px;
-	padding: 20px;
-}
-.uidentify_text {
-	color: var(--red);
+.wrapper-profile {
+  display: flex;
+  align-items: stretch; /* Важно для растяжения дочерних элементов */
+  justify-content: space-between;
+  gap: 20px;
 }
 
-.uidentify_name {
-	color: var(--black);
-	font-weight: 600;
+.profile_left,
+.profile_right {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  gap: 20px;
+  padding: 30px;
+  background-color: #fff;
+  border: 1px solid #0000000f;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.uLeft_content {
-	display: flex;
-	flex-direction: column;
-	flex-wrap: wrap;
-	border-radius: 10px;
-	min-height: 400px;
-	max-height: 400px;
-	gap: 20px;
-	outline: 1px solid var(--inp-border);
-	padding: 20px;
-	/* background: rgb(236, 236, 236); */
-	/* border: 1px solid rgba(228, 225, 219, 0.698); */
+.profile_left {
+  width: 25%;
+}
+
+.profile_right {
+  width: 75%;
 }
 
 .uaccordion_label {
-	display: flex;
-	align-items: center;
-	gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .accordionDetails_links {
-	display: flex;
-	flex-direction: column;
-	gap: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 
 .accordionDetails_links a {
-	text-decoration: none;
-	color: #333;
-	font-size: 18px;
-	text-decoration: underline;
+  text-decoration: none;
+  color: #333;
+  font-size: 18px;
+  text-decoration: underline;
 }
 
 .ulins_sublinks {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .MuiPaper-root {
-	box-shadow: none;
+  box-shadow: none;
 }
 
 .uprofile_list {
-	display: flex;
-	flex-direction: column;
-	gap: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
 
-.ucenter_info {
-	display: flex;
-	justify-content: space-between;
-	gap: 20px;
-	border-radius: 10px;
-	width: 100%;
-	min-height: 400px;
-	max-height: 400px;
-	padding: 20px;
-	border: 1px solid var(--inp-border);
+.user-content {
+  height: 100%;
+  width: 100%;
+  display: flex;
 }
 
-.user-info {
-	display: flex;
-	gap: 30px;
+.user-details {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.user-details_title {
+  color: #607d8b;
+  font-size: 22px;
+  font-weight: 500;
+  margin-bottom: 20px;
+}
+
+.user-details-content {
+  display: flex;
+  align-items: start;
+  gap: 20px;
+}
+
+.user-details_photo {
+  background-color: #fff;
+  border: 1px solid #0000000f;
+  border-radius: 10px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  width: 35%;
+  padding: 24px;
+}
+
+.user-details_photo .photo {
+  width: 100%;
+}
+
+.user-details-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.user-details_list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+/* .uprofile_content {
+  display: flex;
+  align-items: start;
+  gap: 20px;
+}
+
+.uprofile-title {
+  height: 100%;
+  width: 100%;
+  max-height: 325px;
 }
 
 .uprofile_photo {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 10px;
-}
-
-.uinfo_text {
-	display: flex;
-	flex-direction: column;
-	align-items: flex-start;
-	justify-content: space-between;
-	font-weight: 600;
-	color: var(--edo-zayavki-color);
+  border: 1px solid #0000000f;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  height: 100%;
+  width: 100%;
 }
 
 .uphoto {
-	min-height: 250px;
-	border-radius: 10px;
-	max-width: 250px;
+  width: 70%;
+  height: 70%;
+  border-radius: 10px;
 }
+
+.uinfo_text {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  height: 100%;
+  font-weight: 600;
+  color: var(--edo-zayavki-color);
+} */
 
 /* Информация про организацию */
 
 .uorg_content {
-	display: flex;
-	gap: 20px;
-	min-height: 400px;
+  display: flex;
+  gap: 20px;
+  min-height: 400px;
 }
 
 .uorg_info {
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .uright_info {
-	align-self: flex-start;
+  align-self: flex-start;
 }
 
 .uidentify_link {
-	padding: 10px;
+  padding: 10px;
 }
