--- a/front/src/components/Pages/AddRequest/AddRequest.css
+++ b/front/src/components/Pages/AddRequest/AddRequest.css
@@ -37,6 +37,7 @@
   width: 100%;
 }
 
+
 .wrapper-prev {
   width: 100%;
   margin: 20px 0 20px 0;
@@ -76,6 +77,8 @@ th {
   border: 1px solid #000;
   padding: 20px;
 }
+
+/* EFFECT BUTTON */
 
 .pushable {
   position: relative;
