--- a/front/src/components/Pages/Identification/Identification.css
+++ b/front/src/components/Pages/Identification/Identification.css
@@ -16,21 +16,79 @@
 } */
 
 .uidentity_content {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 .uidentity_form {
-	display: flex;
-	/* flex-direction: column; */
-	justify-content: center;
-	align-items: center;
-	gap: 10px;
-	flex-wrap: wrap;
-	padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  flex-wrap: wrap;
+  width: 100%;
+  margin: 20px 0;
 }
 
 .uidentity_inp {
-	width: calc((100% - 10px) / 2);
+  width: calc((100% - 10px) / 2);
+}
+
+/* EFFECT BUTTON */
+
+.pushable {
+  position: relative;
+  background: transparent;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  margin-top: 20px;
+}
+.shadow {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background: rgb(36, 47, 52);
+  transform: translateY(2px);
+}
+.edge {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  background: rgb(61, 78, 87);
+}
+.front {
+  display: block;
+  position: relative;
+  padding: 7px 20px;
+  border-radius: 12px;
+  font-size: 16px;
+  color: white;
+  background: rgb(96, 125, 139);
+  transform: translateY(-4px);
+  transition: ease-in-out 0.1s;
+}
+
+.pushable:hover .front {
+  transform: translateY(-6px);
+}
+.pushable:hover .shadow {
+  transform: translateY(4px);
+}
+.pushable:active .front {
+  transform: translateY(-2px);
+}
+.pushable:active .shadow {
+  transform: translateY(1px);
+}
+
+.pushable:focus:not(:focus-visible) {
+  outline: none;
 }
