--- a/front/src/components/Pages/UProfile/Profile.css
+++ b/front/src/components/Pages/UProfile/Profile.css
@@ -37,9 +37,9 @@
 		0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.profile_left {
+/* .profile_left {
 	width: 25%;
-}
+} */
 
 .profile_right {
 	width: 75%;
