--- a/front/src/components/Pages/Register/Register.css
+++ b/front/src/components/Pages/Register/Register.css
@@ -1,61 +1,65 @@
 .register__content {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
 }
 
 .register_header-list {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-bottom: 10px;
-  border-bottom: 1px solid var(--navbottom-links-bottom-line);
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding-bottom: 10px;
+	border-bottom: 1px solid var(--navbottom-links-bottom-line);
 }
 
 .addrequest_btn {
-  align-self: flex-end;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  padding: 8px 42px;
-  border-radius: 60px;
-  color: #ededed;
-  color: #ffffff;
+	align-self: flex-end;
+	align-items: center;
+	justify-content: center;
+	gap: 5px;
+	padding: 8px 42px;
+	border-radius: 60px;
+	color: #ededed;
+	color: #ffffff;
 }
 
 .addrequest_btn p {
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+	font-size: 14px;
+	font-weight: 500;
+	text-transform: uppercase;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .pointer-cursor {
-  cursor: pointer;
+	cursor: pointer;
 }
 
 .filter {
-  display: flex;
-  gap: 10px;
-  align-items: center;
+	display: flex;
+	gap: 10px;
+	align-items: center;
 }
 
 .panel-control {
-  display: flex;
-  align-items: center;
-  justify-content: end;
+	display: flex;
+	align-items: center;
+	justify-content: end;
 }
 
 .filter-and-add {
-  display: flex;
-  align-items: center;
-  gap: 20px;
+	display: flex;
+	align-items: center;
+	gap: 20px;
 }
 
 .custom-cell {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  padding: 20px 0;
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	padding: 20px 0;
+}
+
+.utype_hidden {
+	display: none;
 }
