--- a/front/src/components/Pages/ShowRequest/ShowRequest.css
+++ b/front/src/components/Pages/ShowRequest/ShowRequest.css
@@ -1,3 +1,8 @@
+.show-content {
+  background-color: #f7f7fc;
+  padding: 40px 0;
+}
+
 .panel-control {
   display: flex;
   justify-content: space-between;
@@ -18,6 +23,7 @@
   margin-bottom: 20px;
   border-radius: 20px;
   border: 1px solid rgba(0, 0, 0, 0.056);
+  background-color: #fff;
 }
 
 /* ShowRequest.css */
