add services list

--- a/front/src/components/UI/WorkSpace/WorkSpace.css
+++ b/front/src/components/UI/WorkSpace/WorkSpace.css
@@ -1,9 +1,17 @@
-.work-space-content {
+.wrapper-work-space {
   padding: 20px 0;
 }
 
+.workspace-content {
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 20px 0;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
+}
+
 .navigation-tabs {
-  border-bottom: 1px solid #00000058;
+  border-bottom: 1px solid #00000040;
+  padding: 0 20px;
 }
 
 .wrapper-tabs {
@@ -13,7 +21,7 @@
 }
 
 .tab {
-  padding: 10px;
+  padding: 10px 0px;
   border-bottom: 3px solid transparent;
   cursor: pointer;
   transition: all 0.1s;
@@ -24,6 +32,6 @@
   border-bottom: 3px solid #607d8b;
 }
 
-/* .active {
+.active {
   border-bottom: 3px solid #607d8b;
-} */
+}
