--- a/front/src/components/UI/Services/ServicesList.css
+++ b/front/src/components/UI/Services/ServicesList.css
@@ -3,4 +3,47 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  margin-bottom: 15px;
+}
+
+.table-service-list {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.table-service-list th,
+.table-service-list td {
+  padding: 10px 20px;
+  text-align: left;
+  border: 1px solid #ddd;
+  font-size: 14px;
+}
+
+.table-service-list td {
+  word-wrap: break-word;
+  padding: 5px 20px;
+}
+
+.table-service-list th {
+  background-color: #f2f2f2;
+}
+
+.table-service-list td:first-child {
+  max-width: 300px;
+}
+
+.table-service-list tr:hover {
+  background-color: #00000007;
+  cursor: pointer;
+  transition: all 0.1s;
+}
+
+.selected {
+  background-color: #00ab4a;
+  color: #fff;
+}
+
+.table-service-list tr.selected:hover {
+  background-color: rgba(0, 168, 73, 0.839);
+  cursor: pointer;
 }
