--- a/front/src/components/UI/Services/ServicesList.css
+++ b/front/src/components/UI/Services/ServicesList.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
-  margin-bottom: 15px;
+  margin: 15px 0;
 }
 
 .table-service-list {
