--- a/front/src/components/Pages/NavBottom/NavBottom.css
+++ b/front/src/components/Pages/NavBottom/NavBottom.css
@@ -5,7 +5,7 @@
 	display: flex;
 	position: relative;
 	overflow-x: auto;
-	width: 100%;
+	/* width: 100%; */
 	padding-top: 10px;
 	padding-bottom: 20px;
 }
@@ -16,7 +16,7 @@
 	border-bottom: 4px solid #94a3b8;
 	text-align: start;
 	padding: 16px 24px;
-	white-space: nowrap; /* Предотвращает перенос текста на новую строку */
+	white-space: nowrap;
 	font-weight: 600;
 }
 
