--- a/front/src/components/Pages/AddRequest/AddRequest.css
+++ b/front/src/components/Pages/AddRequest/AddRequest.css
@@ -113,3 +113,60 @@ th {
 .css-1u4zpwo-MuiSvgIcon-root-MuiStepIcon-root.Mui-active {
   color: #fa8c15;
 }
+
+/* =============== */
+
+.info-accountant {
+  /* background-image: linear-gradient(180deg, #e0f7fa, #b2ebf29b); */
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 20px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
+  margin-bottom: 20px;
+  animation: color-change-3x 4s linear infinite alternate both;
+  /* background-color: #cfe7f6; */
+}
+
+@keyframes color-change-3x {
+  0% {
+    background: #e0f7fa;
+  }
+  50% {
+    background: #b2ebf29b;
+  }
+  100% {
+    background: #ccd1fd8b;
+  }
+}
+
+.wrapper-info {
+  display: flex;
+  gap: 20px;
+  width: 100%;
+}
+
+.wrapper-image {
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.wrapper-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper-text {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.wrapper-text h2 {
+  font-size: 20px;
+  font-weight: 600;
+}
+
+.wrapper-text span {
+  font-weight: 600;
+}
