--- a/front/src/components/Pages/AddRequest/AddRequest.css
+++ b/front/src/components/Pages/AddRequest/AddRequest.css
@@ -124,20 +124,7 @@ th {
   border-radius: 20px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.121);
   margin-bottom: 20px;
-  animation: color-change-3x 4s linear infinite alternate both;
-  /* background-color: #cfe7f6; */
-}
-
-@keyframes color-change-3x {
-  0% {
-    background: #e0f7fa;
-  }
-  50% {
-    background: #b2ebf29b;
-  }
-  100% {
-    background: #ccd1fd8b;
-  }
+  background-color: #fff;
 }
 
 .wrapper-info {
