--- a/front/src/components/Pages/Navigation/Navigation.css
+++ b/front/src/components/Pages/Navigation/Navigation.css
@@ -55,6 +55,10 @@
 	line-height: 16px;
 }
 
+.nav__special-func {
+	visibility: hidden;
+}
+
 .mulish-info-list-item {
 	font-family: "Mulish", sans-serif;
 	font-optical-sizing: auto;
