--- a/front/src/components/Pages/Navigation/Navigation.css
+++ b/front/src/components/Pages/Navigation/Navigation.css
@@ -55,6 +55,10 @@
 	line-height: 16px;
 }
 
+.nav__text {
+	font-weight: 600;
+	font-size: 14px;
+}
 
 .mulish-info-list-item {
 	font-family: "Mulish", sans-serif;
